--- a/css/_redblue/jquery.sceditor.elk_wiz_redblue.css
+++ b/css/_redblue/jquery.sceditor.elk_wiz_redblue.css
@@ -1,10 +1,21 @@
 html, body, p, code:before, table {
 	margin: 0;
 	padding: 0;
-	color: #111;
+	color: #444;
 }
-html>body>p, html>body>div {
-	font: 83.33%/150% "Segoe UI", "Helvetica Neue", "Liberation Sans", "Nimbus Sans L", Arial, sans-serif;
+html {
+	overflow: auto;
+	height: 100%;
+	-webkit-overflow-scrolling: touch;
+}
+body {
+	position: relative;
+	overflow: auto;
+	min-height: 100%;
+	word-wrap: break-word;
+}
+[contenteditable="true"] {
+	font: 87.5%/150% "Segoe UI", "Helvetica Neue", "Liberation Sans", "Nimbus Sans L", Arial, sans-serif;
 }
 ul, ol {
 	margin-top: 0;
